--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>github pull request test01</title>
 </head>
+
 <body>
-  <nav></nav>
+  <nav>
+    <ul>
+      <li>1</li>
+      <li>2</li>
+      <li>3</li>
+    </ul>
+  </nav>
   <header></header>
   <main></main>
   <footer></footer>
 </body>
+
 </html>
